--- a/docker-compose.qa.yml
+++ b/docker-compose.qa.yml
@@ -19,6 +19,14 @@ services:
     volumes:
       - ./django:/src
       - log_data:/var/log/django
+  
+  nuxt:
+    restart: always
+    build: ./frontend
+    expose:
+      - "3000"
+    links:
+      - django
 
   nginx:
     volumes:
