--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -20,6 +20,14 @@ services:
       - ./django:/src
       - log_data:/var/log/django
 
+  nuxt:
+    restart: always
+    build: ./frontend
+    expose:
+      - "3000"
+    links:
+      - django
+
   nginx:
     volumes:
       - ./nginx/site:/usr/share/nginx/html:rw
