Fixed nuxt config

--- a/nginx/conf.d.e2e/default.conf
+++ b/nginx/conf.d.e2e/default.conf
@@ -32,6 +32,14 @@ server {
 
         proxy_pass http://django:8000;
     }
+
+    location / {
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+        proxy_buffering off;
+        proxy_pass http://nuxt:3000/;
+    }
 }
 
 server {
@@ -67,5 +75,13 @@ server {
         proxy_redirect off;
 
         proxy_pass http://django:8000;
+    }
+
+    location / {
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+        proxy_buffering off;
+        proxy_pass http://nuxt:3000/;
     }
 }
