--- a/e2e/package.json
+++ b/e2e/package.json
@@ -15,6 +15,8 @@
     "test:headless": "yarn cypress:run"
   },
   "devDependencies": {
-    "cypress": "6.3.0"
+    "@cypress/code-coverage": "^3.9.2",
+    "@percy/cypress": "^2.3.4",
+    "cypress": "6.4.0"
   }
 }
