Fix for e2e config and nuxt build Remove icloud file, add icloud files to gitignore

--- a/docker-compose.e2e.yml
+++ b/docker-compose.e2e.yml
@@ -9,7 +9,14 @@ services:
     links:
       - django
 
-volumes:
-  postgres_data:
-  log_data:
-  media_data:
+  nginx:
+    restart: always
+    image: nginx:1.15.6
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/conf.d.e2e:/etc/nginx/conf.d:ro
+    links:
+      - django
+      - nuxt
