--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -2,6 +2,5 @@
   "semi": false,
   "arrowParens": "always",
   "singleQuote": true,  
-  "endOfLine": "auto",
-  "printWidth": 120
+  "endOfLine": "auto"
 }
