--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -169,13 +169,13 @@ workflows:
                 job_type: deployment
                 issue_regexp: '[A-Z0-9]{2,30}-[0-9]+'
                 environment: DEV  # DEV, PROD, QA
-      - e2e-dev:
-          requires:
-            - build-and-test
-            - deploy-dev
-          filters:
-            branches:
-              only: dev
+#      - e2e-dev:
+#          requires:
+#            - build-and-test
+#            - deploy-dev
+#          filters:
+#            branches:
+#              only: dev
       - deploy-qa:
           name: QA Server Deployment
           requires:
