update env template with sentry

--- a/django/.env.template
+++ b/django/.env.template
@@ -4,6 +4,7 @@ AZURE_CLIENT_ID=
 AZURE_SECRET=
 AZURE_TENANT=
 AZURE_CALLBACK_URL=
+SENTRY_DSN=
 EMAIL_SENDING_PRODUCTION=
 MIGRATE_PHASES=
 DEPLOY_VERSION=
