remove raven req add sentry-sdk req

--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -95,7 +95,6 @@ pytest-timeout==1.3.3
 python3-openid==3.1.0
 pytz==2018.5
 PyYAML==3.13
-raven==6.9.0
 redis==2.10.6
 requests==2.19.1
 requests-oauthlib==1.0.0
@@ -112,3 +111,4 @@ hashids==1.2.0
 freezegun==0.3.15
 django-dotenv
 django-import-export==2.5.0
+sentry-sdk
