--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,7 @@
     "@nuxtjs/axios": "^5.5.4",
     "@nuxtjs/google-analytics": "^2.2.0",
     "@nuxtjs/proxy": "^1.3.3",
-    "@nuxtjs/sentry": "5.1.4",
+    "@nuxtjs/sentry": "^5.1.5",
     "@vue/eslint-config-standard": "^4.0.0",
     "angular": "1.5.11",
     "angular-animate": "1.5.0",
