--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,6 +94,16 @@ jobs:
           command: |
             export TERM=xterm && ! git diff --name-status origin/development HEAD | grep /migrations/0 | grep "^A"
 
+      - run:
+          name: run translations extraction
+          working_directory: ~/tiip/frontend
+          command: bash gettext.sh
+
+      - run:
+          name: check translations diff
+          working_directory: ~/tiip
+          command: git status
+
   deploy-dev:
     docker:
       - image: circleci/python:3.7.6-stretch
@@ -157,9 +167,13 @@ workflows:
           filters:
             tags:
               only: /^[0-9]+(\.[0-9]+)*$/
+#      - translations-approval:
+#          type: approval
+#      - translations-commit:
       - deploy-dev:
           requires:
             - build-and-test
+            - translations-check
           filters:
             branches:
               only: dev
