--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -176,18 +176,18 @@ workflows:
 #      - translations-approval:
 #          type: approval
 #      - translations-commit:
-      - deploy-dev:
-          requires:
-            - build-and-test
-          filters:
-            branches:
-              only: dev
-          post-steps:
-            - jira/notify:
-                environment_type: development
-                job_type: deployment
-                issue_regexp: '[A-Z0-9]{2,30}-[0-9]+'
-                environment: DEV  # DEV, PROD, QA
+#      - deploy-dev:
+#          requires:
+#            - build-and-test
+#          filters:
+#            branches:
+#              only: dev
+#          post-steps:
+#            - jira/notify:
+#                environment_type: development
+#                job_type: deployment
+#                issue_regexp: '[A-Z0-9]{2,30}-[0-9]+'
+#                environment: DEV  # DEV, PROD, QA
 #      - e2e-dev:
 #          requires:
 #            - build-and-test
