--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -95,9 +95,9 @@ jobs:
 #          command: |
 #            export TERM=xterm && ! git diff --name-status origin/development HEAD | grep /migrations/0 | grep "^A"
 
-      - run:
-          name: install gettext
-          command: sudo apt-get update && sudo apt-get install -y gettext
+#      - run:
+#          name: install gettext
+#          command: sudo apt-get update && sudo apt-get install -y gettext
       - run:
           name: run translations extraction
           working_directory: ~/tiip/frontend
@@ -108,7 +108,7 @@ jobs:
           command: git status
       - run:
           name: check diff
-          command: git diff django/translations/master.pot
+          command: export TERM=xterm && git diff django/translations/master.pot
 
   deploy-dev:
     docker:
