--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ diff.txt
 dump.*
 django/celerybeat-schedule
 django/celerybeat-schedule.*
+django/tiip/settings_deployed.py
 .floo
 .flooignore
 .sublimelinterrc
