--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -109,6 +109,6 @@ wcwidth==0.1.7
 wrapt==1.11.2
 hashids==1.2.0
 freezegun==0.3.15
-django-dotenv
 django-import-export==2.5.0
 sentry-sdk
+environs
