Feature/road to fame (#382)
* remove cms and toolkit files

* add settings deployed to gitignore

* replace dotenv with environs

* remove dotenv calls

* initial sites

* remove ar tests

* env changes

* settings changes

* remove files

* fix letsencrypt

* update readme

* add environs to cricle conf

* update env template

* remove hosts from fab

* requirements local

* add new stuff to settings

* fix urls

* validators generalisation

* update env template

* enable api registration flag

* flagged registration urls

* update gitignore

* lint fixes

* remove manage dotenv

* remove keys from nuxt config

* default postgres string

* fix default regex on email validator

* fix email validator test

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ diff.txt
 dump.*
 django/celerybeat-schedule
 django/celerybeat-schedule.*
+django/tiip/settings_deployed.py
 .floo
 .flooignore
 .sublimelinterrc
@@ -41,3 +42,5 @@ yarn-error.log
 .history/
 django/.env
 *.icloud
+init-letsencrypt.qa.sh
+init-letsencrypt.dev.sh
