--- a/django/.env.template
+++ b/django/.env.template
@@ -1,10 +1,18 @@
 SECRET_KEY=
 DEBUG=False
+PROJECT_NAME=
+DEFAULT_FROM_EMAIL=
+REDIS_URL=redis
 AZURE_CLIENT_ID=
 AZURE_SECRET=
 AZURE_TENANT=
 AZURE_CALLBACK_URL=
 SENTRY_DSN=
-EMAIL_SENDING_PRODUCTION=
-MIGRATE_PHASES=
+EMAIL_SENDING_PRODUCTION=False
+MIGRATE_PHASES=False
+OSM_MAP_CLI_KEY=
+SIMPLE_FEEDBACK_SEND_TO=
+API_MAINTAINER=
+EMAIL_VALIDATOR_REGEX=
+ENABLE_API_REGISTRATION=True
 DEPLOY_VERSION=
